# string-lights

./: .gitignore  CLAUDE.md  pyproject.toml  readme.md
guitar_strings/: __main__.py  board.py  pipeline.py  pose.py
string_lights/: __main__.py  audio.py  board.py  config.py  editor.py  masking.py  pipeline.py  pose.py  strings.py  tuner.py
string_lights/static/: editor.css  editor.js
string_lights/templates/: editor.html
